tests/baselines/reference/enumInitializers_const_circular.errors.txt
tests/cases/compiler/enumInitializers_const_circular.ts(3,9): error TS2474: In 'const' enum declarations member initializer must be constant expression.
tests/cases/compiler/enumInitializers_const_circular.ts(10,9): error TS2474: In 'const' enum declarations member initializer must be constant expression.


==== tests/cases/compiler/enumInitializers_const_circular.ts (2 errors) ====
    const x = E.y;
    const enum E {
        y = x,
            ~
!!! error TS2474: In 'const' enum declarations member initializer must be constant expression.
    }
    
    namespace N {
        export const a = F.a;
    }
    const enum F {
        a = N.a,
            ~~~
!!! error TS2474: In 'const' enum declarations member initializer must be constant expression.
    }
    